WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259928
REGRESSION (
261984@main
): Copied tables from some web pages don't properly paste into Numbers
https://bugs.webkit.org/show_bug.cgi?id=259928
Summary
REGRESSION (261984@main): Copied tables from some web pages don't properly pa...
Wenson Hsieh
Reported
2023-08-08 08:33:03 PDT
rdar://112030767
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-08-08 09:35:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16480
EWS
Comment 2
2023-08-08 14:32:09 PDT
Committed
266700@main
(664af9c1e8d7): <
https://commits.webkit.org/266700@main
> Reviewed commits have been landed. Closing PR #16480 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug